leptos_macro/tests/view/46_slot_missing_required_prop.stderr
error[E0277]: missing required prop `concrete_i32` on slot `HelloSlot`
  --> tests/view/46_slot_missing_required_prop.rs:24:13
   |
24 | /             <HelloSlot slot>
25 | |                 "Hello, World!"
26 | |             </HelloSlot>
   | |________________________^ missing prop `concrete_i32`
   |
   = help: the trait `__required_HelloSlot_concrete_i32` is not implemented for `()`
   = note: required props: [`concrete_i32`]
help: the trait `__required_HelloSlot_concrete_i32` is implemented for `(__T,)`
  --> tests/view/46_slot_missing_required_prop.rs:6:1
   |
 6 | #[slot]
   | ^^^^^^^
note: required for `__HelloSlot::__PresenceBuilder<((), ((),))>` to implement `__HelloSlot::__CheckPresence`
  --> tests/view/46_slot_missing_required_prop.rs:6:1
   |
 6 | #[slot]
   | ^^^^^^^
   = note: this error originates in the attribute macro `slot` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: the method `__check_missing` exists for struct `__HelloSlot::__PresenceBuilder<((), ((),))>`, but its trait bounds were not satisfied
  --> tests/view/46_slot_missing_required_prop.rs:24:13
   |
 6 |   #[slot]
   |   ------- method `__check_missing` not found for this struct
...
24 |               <HelloSlot slot>
   |  _____________^
25 | |                 "Hello, World!"
26 | |             </HelloSlot>
   | |________________________^
   |
note: trait bound `(): __required_HelloSlot_concrete_i32` was not satisfied
  --> tests/view/46_slot_missing_required_prop.rs:6:1
   |
 6 | #[slot]
   | ^^^^^^^
   = note: this error originates in the attribute macro `slot` (in Nightly builds, run with -Z macro-backtrace for more info)
